--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# CMake Ignores:
 CMakeLists.txt.user
 CMakeCache.txt
 CMakeFiles
@@ -10,3 +11,9 @@ compile_commands.json
 CTestTestfile.cmake
 _deps
 CMakeUserPresets.json
+*.cmake
+
+# 
+WaTor
+WaTor.exe
+.vscode/
